# vibe-x-minimal

./: README.md
client/: .eslintrc.json  package.json  pnpm-lock.yaml  tailwind.config.js
client/api/: axios.ts  types.ts
client/api/endpoints/: process-text.ts
client/app/: layout.tsx  page.tsx
client/components/: icons.tsx  input-text.tsx  strory-modal.tsx  upload-pdf.tsx
client/components/ui/: cat-loading.tsx
client/config/: site.ts
client/styles/: globals.css
server/: .gitignore  pyproject.toml  run.py
server/app/: main.py
server/app/config/: prompts.py
server/app/models/: agent_response.py  process_text.py
server/app/routes/: process_text.py
server/app/services/: agent.py
server/app/utils/: formatter.py  splitter.py
