[project]
name = "vibex"
version = "0.1.0"
description = ""
authors = [
    {name = "Puneet",email = "puneetkpoonia672003@gmail.com"}
]
package-mode = false
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-mistralai (>=0.2.10,<0.3.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "transformers (>=4.49.0,<4.50.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "semantic-text-splitter (>=0.25.1,<0.26.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
